--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -41,14 +41,12 @@
     sm:leading-5;
   }
   .btn-form {
-    @apply w-full
-    flex
+    @apply flex
     justify-center
     py-2
     px-4
     border border-transparent
     text-sm
-    font-medium
     rounded-md
     text-primary
     bg-secondary
@@ -58,7 +56,26 @@
     focus:ring-indigo-600
     transition
     duration-150
-    ease-in-out;
+    ease-in-out
+    font-bold
+    shadow-lg
+    w-1/2;
+  }
+  .selectForm {
+    @apply block
+            appearance-none
+            w-full
+            bg-primary
+            border border-gray-200
+            text-secondary
+            py-3
+            px-4
+            pr-8
+            rounded
+            leading-tight
+            focus:outline-none
+            focus:bg-secondary
+            focus:border-gray-500;
   }
 }
 
